<resources>
    <string name="app_name">Pídeselo a Jaime</string>
    <string name="title_activity__side_bar">Activity_SideBar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="logo_name">Pídeselo a Jaime</string>

    <string-array name="titles">
        <item>Tienda</item>
        <item>Mi Carrito</item>
        <item>Mis pedidos</item>
        <item>Mi Cuenta</item>
        <item>Cerrar Sesion</item>
    </string-array>

    <string name="action_settings">Settings</string>
    <string name="tienda_txt">Tienda</string>
    <string name="mi_carrito_txt">Mi Carrito</string>
    <string name="mis_pedidos_txt">Mis Pedidos</string>
    <string name="mi_cuenta_txt">Mi Cuenta</string>
    <string name="cerrar_sesion_txt">Cerrar Sesión</string>
    <string name="nombre_usuario_txt">Nombre de usuario</string>
    <string name="correo_usuario_txt">Correo de Usuario</string>

    <string name="fragment_tab1">Bebidas</string>
    <string name="fragment_tab2">Comidas</string>
    <string name="fragment_tab3">Paquetes</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="facebook_app_id">802977079873837</string>
    <string name="cancel_login">Inicio de sesión cancelado</string>
    <string name="error_login">Error</string>

    <string name="title_activity_navigation_drawer">ActivityNavigationDrawer</string>

    <string name="agregarCarrito_txt">Agregar al carrito</string>
    <string name="agregadoCarrito_txt">Agregado al Carrito</string>

    <string name="undo_txt">Undo</string>
    <string name="title_activity_maps">Mapas</string>
    <string name="pedir_orden">Continuar con pago</string>

    <string name="tiempo">tiempo aproximado: 30 min</string>

    <string name="gracias_pago">Gracias por su pago</string>
    <string name="pedido">Su pedido es el</string>
    <string name="numero">#203578</string>




</resources>
