<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mx.iteso.jaimeapp.pideseloajaime.ActivityFinalizarCompra">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/gracias_pago"
        android:textSize="35dp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="110dp">

        <TextView

            android:id="@+id/id_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="date"
            android:layout_marginLeft="15dp"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/pedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/id_date"
            android:layout_alignBottom="@+id/id_date"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="14dp"
            android:gravity="right"
            android:text="@string/pedido"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignEnd="@+id/pedido"
            android:layout_below="@+id/pedido"
            android:layout_marginEnd="27dp"
            android:text="@string/numero"
            android:textSize="20dp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight=""
        android:background="@android:color/darker_gray"/>


</LinearLayout>
